Correction 2 erreurs de contraste avec .bgc-dark-slate-blue

--- a/style.css
+++ b/style.css
@@ -785,6 +785,10 @@ h4 {
     background-color: #F3976C;
 }
 
+.bgc-dark-slate-blue {
+    background-color: #364577;
+}
+
 .tc-white {
     color: #FFFFFF!important;
 }
